Fixup coloring and align with design expectations

--- a/client/web/src/enterprise/campaigns/detail/changesets/ExternalChangesetNode.scss
+++ b/client/web/src/enterprise/campaigns/detail/changesets/ExternalChangesetNode.scss
@@ -10,12 +10,9 @@
         }
     }
     &__bg-expanded {
-        @include media-breakpoint-up(sm) {
-            background-color: rgba($oc-blue-0, 0.5);
-        }
+        background-color: rgba($oc-blue-0, 0.5);
     }
     &__expanded-section {
-        background-color: rgba($oc-blue-0, 0.5);
         // Make it full width in the current row.
         grid-column: 2 / -1;
         @include media-breakpoint-down(xs) {
